Dark Mode Logic (bug still active)

--- a/client/src/components/App.scss
+++ b/client/src/components/App.scss
@@ -28,7 +28,7 @@
   }
 }
 
-.App-header {
+.Container {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
